# vero-core-engine

./: .env.example  ARCHITECTURE.md  BUILD_ENGINE.sh  CORE_FIX_SUMMARY.md  Cargo.toml  ENGINE_CORE_25_FIX_REPORT.md  EVENT_QUEUE_DESIGN.md  EVENT_QUEUE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROPOSAL_STATE_FSM.md  README.md  TREASURY_SNAPSHOT_DESIGN.md
dashboard/: index.html  (+5 more)
engine-core/: Cargo.toml
engine-core/src/: audit.rs  burn.rs  circuit_breaker.rs  emergency_recovery.rs  event_struct.rs  event_utils.rs  governance.rs  governance_tests.rs  guards.rs  lib.rs  protocol_fee.rs  reentrancy_tests.rs  treasury.rs  treasury_tests.rs  types.rs  upgrade.rs  version.rs
engine-core/src/core/: control_plane.rs  engine.rs  mod.rs  proxy.rs  tests.rs  zk_hooks.rs
engine-core/test_snapshots/audit/tests/: replay_is_rejected.1.json  valid_first_commitment.1.json
engine-core/test_snapshots/burn/tests/: zero_address_rejected.1.json
engine-core/test_snapshots/circuit_breaker/tests/: non_guardian_cannot_trip.1.json  trip_and_reset.1.json
engine-core/test_snapshots/core/tests/: test_batch_update_param_success.1.json  test_initialize.1.json  test_initialize_and_require_role.1.json  test_initialize_twice_panics.1.json  test_require_role_unauthorized.1.json  test_update_param_success.1.json
engine-core/test_snapshots/emergency_recovery/tests/: init_rejects_threshold_exceeding_admin_count.1.json  non_admin_cannot_approve.1.json  non_admin_cannot_request.1.json  same_admin_cannot_double_approve.1.json  single_approval_does_not_execute_when_threshold_is_two.1.json
(+96 files in other folders)
