[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
description = "Vero Protocol — ZK audit, multi-sig governance, circuit-breaker"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }
sha2        = { version = "0.10", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
